force-app/main/default/objects/Activity_Price_Agreement_Setting__c/Activity_Price_Agreement_Setting__c.object-meta.xml
<CustomObject>
    <label>Activity Price Agreement Setting</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Price Agreement Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>