force-app/main/default/objects/Activity_Price_Agreement_Setting__c/fields/Exception__c.field-meta.xml
<CustomField>
    <fullName>Exception__c</fullName>
    <label>Exception</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Activity_Price_Agreement</valueSetName>
    </valueSet>
</CustomField>