force-app/main/default/objects/Activity_Price_Agreement_Setting__c/fields/Price_Agreement_Field__c.field-meta.xml
<CustomField>
    <fullName>Price_Agreement_Field__c</fullName>
    <label>Price Agreement Field</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accounting</fullName>
                <isActive>false</isActive>
                <label>Accounting</label>
            </value>
            <value>
                <fullName>Consulting</fullName>
                <isActive>false</isActive>
                <label>Consulting</label>
            </value>
            <value>
                <fullName>PA_Accounting__c</fullName>
            </value>
            <value>
                <fullName>PA_Consulting__c</fullName>
                <isActive>false</isActive>
                <label>PA_Consulting__c</label>
            </value>
            <value>
                <fullName>PA_HR__c</fullName>
                <isActive>false</isActive>
                <label>PA_HR__c</label>
            </value>
            <value>
                <fullName>PA_Payroll__c</fullName>
            </value>
            <value>
                <fullName>PA_Reporting__c</fullName>
            </value>
            <value>
                <fullName>PA_Services__c</fullName>
            </value>
            <value>
                <fullName>PA_Support__c</fullName>
            </value>
            <value>
                <fullName>PA_VTI__c</fullName>
            </value>
            <value>
                <fullName>PA_Year_end_reporting__c</fullName>
            </value>
            <value>
                <fullName>Payroll</fullName>
                <isActive>false</isActive>
                <label>Payroll</label>
            </value>
            <value>
                <fullName>VTI</fullName>
                <isActive>false</isActive>
                <label>VTI</label>
            </value>
            <value>
                <fullName>Year end reporting</fullName>
                <isActive>false</isActive>
                <label>Year end reporting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>