force-app/main/default/objects/Activity_Price_Agreement_Setting__c/fields/Value_not_allowed__c.field-meta.xml
<CustomField>
    <fullName>Value_not_allowed__c</fullName>
    <label>Value not allowed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Activity_Price_Agreement</valueSetName>
    </valueSet>
</CustomField>