force-app/main/default/objects/Activity_Price_Agreement_Setting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Activity__c</columns>
    <columns>Price_Agreement_Field__c</columns>
    <columns>Exception__c</columns>
    <columns>Value_not_allowed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>